Initial shell of a menu bar
Much of this borrowed from Building Models

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,7 @@
   <head>
     <script src="../dist/js/globals.js"></script>
     <script src="../dist/js/app.js"></script>
+  <link rel="stylesheet" href="../dist/css/app.css">
   </head>
   <body>
     <div id="wrapper">
