--- a/demo/text-app.html
+++ b/demo/text-app.html
@@ -5,7 +5,7 @@
         font-family: 'Arial', 'Helvetica', 'sans-serif'
       }
       textarea {
-        width: 600px;
+        width: 100%;
         height:300px;
       }
       #buttons {
@@ -49,7 +49,7 @@
   <body>
     <h2>Demo App</h2>
     <p>
-      This simple demo app uses the textarea below edit text files.  You can either use the menu bar or the buttons below.
+      This simple demo app uses the textarea below to edit text files.  You can either use the menu bar or the buttons below to open, save and create new files.
     </p>
     <div>
       <textarea cols="50" rows="10" id="text"></textarea>
@@ -90,6 +90,8 @@
           }
         });
       }
+
+      document.getElementById("text").focus()
     </script>
   </body>
 </html>
