--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -19,7 +19,10 @@
           }},
           "googleDrive",
           "documentStore"
-        ]
+        ],
+        ui: {
+          menu: CloudFileManager.DefaultMenu
+        }
       }
       CloudFileManager.createFrame(options, "wrapper");
     </script>
