Allow app to run without frame; create demo

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -11,7 +11,7 @@
     <h1>Cloud File Manager Examples</h1>
     <ul>
       <li><a href="all-providers.html">All Providers</a></li>
-
+      <li><a href="no-frame.html">No Frame</a></li>
     </ul>
   </body>
 </html>
