Update no-frame example with GoogleDrive clientKey

--- a/src/assets/examples/no-frame.html
+++ b/src/assets/examples/no-frame.html
@@ -66,11 +66,18 @@
       var clientOptions = {
         providers: [
           "localStorage",
-          {"name": "readOnly", json: {
-            "first-example": "This is the first readonly example",
-            "second-example": "This is the second readonly example"
-          }},
-          "googleDrive",
+          {
+            "name": "readOnly",
+            "json": {
+              "first-example": "This is the first readonly example",
+              "second-example": "This is the second readonly example"
+            }
+          },
+          {
+            "name": "googleDrive",
+            "mimeType": "text/plain",
+            "clientId": "1095918012594-svs72eqfalasuc4t1p1ps1m8r9b8psso.apps.googleusercontent.com"
+          },
           "documentStore"
         ]
       };
