The file manager can show a help icon linking to a specified help link on the right side of the menu. [#108890984]

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -11,6 +11,9 @@
     <script>
       var options = {
         app: "example-app",
+        menuBar: {
+          help: "http://lmgtfy.com/"
+        },
         providers: [
           "localStorage",
           {
