The file manager can show the version number of the app in the right side of the menu. [#108890948]

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -12,6 +12,7 @@
       var options = {
         app: "example-app",
         menuBar: {
+          info: "Version 1.0.0",
           help: "http://lmgtfy.com/"
         },
         providers: [
