The file manager can have custom menu items (like "Import Data..." in CODAP. [#108891088]

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -32,7 +32,10 @@
           "documentStore"
         ],
         ui: {
-          menu: CloudFileManager.DefaultMenu
+          menu: CloudFileManager.DefaultMenu.concat([{
+            name: 'Outer Frame Callback Menu Item',
+            action: function () { alert('This is an example of a callback menu item added in the outer frame')}
+          }])
         }
       }
       CloudFileManager.createFrame(options, "wrapper");
