Added option to allow client to set menu bar info text

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -12,7 +12,7 @@
       var options = {
         app: "example-app",
         menuBar: {
-          info: "Version 1.0.0",
+          // info: "Version 1.0.0", <- this can be set here or via client.setMenuBarInfo('Version 1.0.0')
           help: "http://lmgtfy.com/"
         },
         providers: [
