--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -69,11 +69,13 @@
           console.log(event);
           switch (event.type) {
             case 'connected':
-              setClient(event.data.client);
-              event.data.client.appendMenuItem({
+              var client = event.data.client;
+              setClient(client);
+              client.appendMenuItem({
                 name: 'Inner Frame Callback Menu Item',
                 action: function () { alert('This is an example of a callback menu item added in the inner frame')}
               });
+              client.setMenuBarInfo('Version 0.0.1');
               break;
 
             case 'getContent':
