The file manager can support auto-saving. [#108461924]

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -79,7 +79,7 @@
                 name: 'Inner Frame Callback Menu Item',
                 action: function () { alert('This is an example of a callback menu item added in the inner frame')}
               });
-              client.setMenuBarInfo('Version 0.0.1');
+              //client.setMenuBarInfo('Version 0.0.1');
               break;
 
             case 'getContent':
