--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -12,6 +12,7 @@
     <ul>
       <li><a href="all-providers.html">All Providers</a></li>
       <li><a href="no-frame.html">No Frame</a></li>
+      <li><a href="auto-saving.html">Auto Saving</a></li>
     </ul>
   </body>
 </html>
