--- a/src/assets/examples/auto-saving.html
+++ b/src/assets/examples/auto-saving.html
@@ -3,7 +3,7 @@
     <script src="../js/globals.js"></script>
     <script src="../js/app.js"></script>
     <link rel="stylesheet" href="../css/app.css">
-    <title>Examples: All Providers</title>
+    <title>Examples: Autosaving</title>
   </head>
   <body>
     <div id="wrapper">
@@ -12,9 +12,9 @@
       var options = {
         app: "example-app",
         menuBar: {
-          info: "Version 1.0.0",
-          help: "http://lmgtfy.com/"
+          info: "This version auto saves every 5 seconds"
         },
+        autoSaveInterval: 5,
         providers: [
           "localStorage",
           {
@@ -32,10 +32,7 @@
           "documentStore"
         ],
         ui: {
-          menu: CloudFileManager.DefaultMenu.concat([{
-            name: 'Outer Frame Callback Menu Item',
-            action: function () { alert('This is an example of a callback menu item added in the outer frame')}
-          }])
+          menu: CloudFileManager.DefaultMenu
         }
       }
       CloudFileManager.createFrame(options, "wrapper");
