Add loading for Doc Sever files and fix listing

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -95,7 +95,10 @@
               break;
 
             case 'openedFile':
-              setTextValue(event.data.content);
+              content = event.data.content
+              if(typeof content === "object")
+                content = JSON.stringify(content)
+              setTextValue(content);
               focus();
               break;
           }
