--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -13,6 +13,7 @@
       <li><a href="all-providers.html">All Providers</a></li>
       <li><a href="no-frame.html">No Frame</a></li>
       <li><a href="auto-saving.html">Auto Saving</a></li>
+      <li><a href="new-opens-in-new-tab.html">New Opens in New Tab</a></li>
     </ul>
   </body>
 </html>
