Validate saved content before saving it to Doc Store
First, ensure we are saving a JSON object, and save
`{content: "saved_content"}` if the inner app doesn't doesn't
provide us with one.

Next, if the inner app doesn't hand us back an object with the
needed keys, we can optionally add them ourselves from the
documentStore's initialization options.

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -29,7 +29,14 @@
             "mimeType": "text/plain",
             "clientId": "1095918012594-svs72eqfalasuc4t1p1ps1m8r9b8psso.apps.googleusercontent.com"
           },
-          "documentStore"
+          {
+            "name": "documentStore",
+            // These parameters are optional. If the saved file is JSON with
+            // these parameters already set, these will be ignored
+            "appName": "CFM_Demo",
+            "appVersion": "0.1",
+            "appBuildNum": "1"
+          }
         ],
         ui: {
           menu: CloudFileManager.DefaultMenu.concat([{
