Add mimeType as a top-level option

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -11,6 +11,7 @@
     <script>
       var options = {
         app: "example-app",
+        mimeType: "text/plain",
         providers: [
           "localStorage",
           {
@@ -22,7 +23,6 @@
           },
           {
             "name": "googleDrive",
-            "mimeType": "text/plain",
             "clientId": "1095918012594-svs72eqfalasuc4t1p1ps1m8r9b8psso.apps.googleusercontent.com"
           },
           {
