--- a/src/assets/examples/auto-saving.html
+++ b/src/assets/examples/auto-saving.html
@@ -12,6 +12,7 @@
       var options = {
         app: "example-app",
         autoSaveInterval: 5,
+        mimeType: "text/plain",
         providers: [
           "localStorage",
           {
