--- a/src/assets/examples/new-opens-in-new-tab.html
+++ b/src/assets/examples/new-opens-in-new-tab.html
@@ -11,6 +11,7 @@
     <script>
       var options = {
         app: "example-app",
+        mimeType: "text/plain",
         providers: [
           "localStorage",
           {
