--- a/src/assets/examples/no-frame.html
+++ b/src/assets/examples/no-frame.html
@@ -64,6 +64,7 @@
     </div>
     <script type="text/javascript">
       var clientOptions = {
+        mimeType: "text/plain",
         providers: [
           "localStorage",
           {
