Standardize Doc Server provider to only use strings
The other providers deal with strings, and it makes more sense simply to
standardize this in the CFM API rather than to use settings in the init.

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -95,10 +95,7 @@
               break;
 
             case 'openedFile':
-              content = event.data.content
-              if(typeof content === "object")
-                content = JSON.stringify(content)
-              setTextValue(content);
+              setTextValue(event.data.content);
               focus();
               break;
           }
