--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -12,8 +12,10 @@
         margin-top: 10px;
       }
     </style>
+    <script src="jiff_bundled.js"></script>
     <script type="text/javascript">
-      var cfmClient;
+      var cfmClient,
+          lastSavedContent;
 
       function newFile() {
         cfmClient && cfmClient.newFileDialog();
@@ -51,6 +53,21 @@
       function focus() {
         document.getElementById("text").focus();
       }
+
+      function setSavedContent(content) {
+        lastSavedContent = content;
+      }
+
+      function getPatchValue() {
+        try {
+          var oldDoc = JSON.parse(lastSavedContent),
+              newDoc = JSON.parse(getTextValue()),
+              diff   = jiff.diff(oldDoc, newDoc);
+          return JSON.stringify(diff);
+        } catch (e) {
+          return null;
+        }
+      }
     </script>
   </head>
   <body>
@@ -86,17 +103,27 @@
               break;
 
             case 'getContent':
-              event.callback(getTextValue());
+              if (event.data.patchable && (patch = getPatchValue())) {
+                event.callback(patch, true);
+              } else {
+                event.callback(getTextValue());
+              }
               break;
 
             case 'newedFile':
               setTextValue('');
+              setSavedContent(null);
               focus();
               break;
 
             case 'openedFile':
               setTextValue(event.data.content);
+              setSavedContent(event.data.content);
               focus();
+              break;
+
+            case 'savedFile':
+              setSavedContent(event.data.content);
               break;
           }
         });
