Update example to use `save` instead of `saveContent`
This means that there's only one path which always uses the `getContent`
callback, so we don't have to keep both paths in sync.

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -27,7 +27,7 @@
       }
 
       function saveFile() {
-        cfmClient && cfmClient.saveContent(getTextValue());
+        cfmClient && cfmClient.save();
       }
 
       function saveFileAs() {
