Added menu separators

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -35,10 +35,15 @@
           }
         ],
         ui: {
-          menu: CloudFileManager.DefaultMenu.concat([{
-            name: 'Outer Frame Callback Menu Item',
-            action: function () { alert('This is an example of a callback menu item added in the outer frame')}
-          }]),
+          menu: CloudFileManager.DefaultMenu.concat([
+            {
+              separator: true
+            },
+            {
+              name: 'Outer Frame Callback Menu Item',
+              action: function () { alert('This is an example of a callback menu item added in the outer frame')},
+            }
+          ]),
           menuBar: {
             info: "Version 1.0.0",
             help: "http://lmgtfy.com/"
