Added autosave menu with save a copy option

--- a/src/assets/examples/auto-saving.html
+++ b/src/assets/examples/auto-saving.html
@@ -37,7 +37,7 @@
           }
         ],
         ui: {
-          menu: CloudFileManager.DefaultMenu,
+          menu: CloudFileManager.AutoSaveMenu,
           menuBar: {
             info: "This version auto saves every 5 seconds"
           }
