--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -13,7 +13,7 @@
       }
     </style>
     <script type="text/javascript">
-      var cfmClient;
+      var cfmClient, cfmContent;
 
       function newFile() {
         cfmClient && cfmClient.newFileDialog();
@@ -29,23 +29,26 @@
       }
 
       function saveFileAs() {
-        cfmClient && cfmClient.saveFileAsDialog(getTextValue());
+        cfmClient && cfmClient.saveFileAsDialog(getContent());
       }
 
-      function getTextValue() {
-        return document.getElementById("text").value;
+      function getContent() {
+        cfmContent.setText(document.getElementById("text").value);
+        return cfmContent;
       }
 
-      function setTextValue(text) {
-        document.getElementById("text").value = text;
+      function setContent(_cfmContent) {
+        cfmContent = _cfmContent;
+        document.getElementById("text").value = cfmContent.getText();
       }
 
-      function setClient(client) {
+      function connected(client) {
         cfmClient = client;
+        cfmContent = client.createTextContent(document.getElementById("text").value);
       }
 
       function changed() {
-        cfmClient.dirty();
+        cfmClient && cfmClient.dirty();
       }
 
       function focus() {
@@ -77,7 +80,7 @@
           switch (event.type) {
             case 'connected':
               var client = event.data.client;
-              setClient(client);
+              connected(client);
               client.appendMenuItem({
                 name: 'Inner Frame Callback Menu Item',
                 action: function () { alert('This is an example of a callback menu item added in the inner frame')}
@@ -86,16 +89,12 @@
               break;
 
             case 'getContent':
-              event.callback(getTextValue());
+              event.callback(getContent());
               break;
 
             case 'newedFile':
-              setTextValue('');
-              focus();
-              break;
-
             case 'openedFile':
-              setTextValue(event.data.content);
+              setContent(event.data.content);
               focus();
               break;
           }
