Add patch option to examples

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -31,7 +31,8 @@
             // these parameters already set, these will be ignored
             "appName": "CFM_Demo",
             "appVersion": "0.1",
-            "appBuildNum": "1"
+            "appBuildNum": "1",
+            "patch": true
           }
         ],
         ui: {
