--- a/src/assets/examples/auto-saving.html
+++ b/src/assets/examples/auto-saving.html
@@ -33,7 +33,8 @@
             // these parameters already set, these will be ignored
             "appName": "CFM_Demo",
             "appVersion": "0.1",
-            "appBuildNum": "1"
+            "appBuildNum": "1",
+            "patch": true
           }
         ],
         ui: {
