A user can navigate to sub-folders in the file dialog but not create or delete them [#109249998]

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -14,6 +14,7 @@
       <li><a href="no-frame.html">No Frame</a></li>
       <li><a href="auto-saving.html">Auto Saving</a></li>
       <li><a href="new-opens-in-new-tab.html">New Opens in New Tab</a></li>
+      <li><a href="read-only-with-folders.html">Read Only with Folders</a></li>
     </ul>
   </body>
 </html>
