--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -15,6 +15,7 @@
       <li><a href="auto-saving.html">Auto Saving</a></li>
       <li><a href="new-opens-in-new-tab.html">New Opens in New Tab</a></li>
       <li><a href="read-only-with-folders.html">Read Only with Folders</a></li>
+      <li><a href="menu-madness.html">Menu Madness</a></li>
     </ul>
   </body>
 </html>
