Added real time option to google drive provider

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -16,6 +16,7 @@
       <li><a href="new-opens-in-new-tab.html">New Opens in New Tab</a></li>
       <li><a href="read-only-with-folders.html">Read Only with Folders</a></li>
       <li><a href="menu-madness.html">Menu Madness</a></li>
+      <li><a href="real-time-api.html">Google Real Time API</a></li>
     </ul>
   </body>
 </html>
