--- a/src/assets/examples/real-time-api.html
+++ b/src/assets/examples/real-time-api.html
@@ -12,6 +12,9 @@
       var options = {
         app: "example-app",
         mimeType: "text/plain",
+        appName: "CFM_Demo",
+        appVersion: "0.1",
+        appBuildNum: "1",
         providers: [
           "localStorage",
           {
@@ -29,11 +32,6 @@
           },
           {
             "name": "documentStore",
-            // These parameters are optional. If the saved file is JSON with
-            // these parameters already set, these will be ignored
-            "appName": "CFM_Demo",
-            "appVersion": "0.1",
-            "appBuildNum": "1",
             "patch": true
           }
         ],
