Refactor API to pass only strings to innerApp
This changes the communication between the innerApp and the client so
that only strings are passed back and forth between them, eliminating
any need for the innerApp to know about CloudContent.

Communication of content between client and providers uses only
CloudContent.

By shielding the inner app from CloudContent, we will make it easier
to work with the CloudContent internally (e.g. wrapping data in an
envelope).

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -13,7 +13,7 @@
       }
     </style>
     <script type="text/javascript">
-      var cfmClient, cfmContent;
+      var cfmClient;
 
       function newFile() {
         cfmClient && cfmClient.newFileDialog();
@@ -33,18 +33,15 @@
       }
 
       function getContent() {
-        cfmContent.setText(document.getElementById("text").value);
-        return cfmContent;
+        return document.getElementById("text").value;
       }
 
-      function setContent(_cfmContent) {
-        cfmContent = _cfmContent;
-        document.getElementById("text").value = cfmContent.getText();
+      function setContent(cfmContent) {
+        document.getElementById("text").value = cfmContent;
       }
 
       function connected(client) {
         cfmClient = client;
-        cfmContent = client.createTextContent(document.getElementById("text").value);
       }
 
       function changed() {
