--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -13,7 +13,7 @@
       <li><a href="all-providers.html">All Providers</a></li>
       <li><a href="no-frame.html">No Frame</a></li>
       <li><a href="auto-saving.html">Auto Saving</a></li>
-      <li><a href="new-opens-in-new-tab.html">New Opens in New Tab</a></li>
+      <li><a href="new-does-not-use-new-tab.html">New Does Not Open in New Tab</a></li>
       <li><a href="read-only-with-folders.html">Read Only with Folders</a></li>
       <li><a href="menu-madness.html">Menu Madness</a></li>
       <li><a href="real-time-api.html">Google Real Time API</a></li>
