--- a/src/assets/examples/new-does-not-use-new-tab.html
+++ b/src/assets/examples/new-does-not-use-new-tab.html
@@ -3,7 +3,7 @@
     <script src="../js/globals.js"></script>
     <script src="../js/app.js"></script>
     <link rel="stylesheet" href="../css/app.css">
-    <title>Examples: New Opens In New Tab</title>
+    <title>Examples: New Does Not Open In New Tab</title>
   </head>
   <body>
     <div id="wrapper">
@@ -34,9 +34,9 @@
         ui: {
           menu: CloudFileManager.DefaultMenu,
           menuBar: {
-            info: "This version opens new documents in a new tab"
+            info: "In this version new documents do not open in a new tab"
           },
-          newFileOpensInNewTab: true
+          newFileOpensInNewTab: false
         }
       }
       CloudFileManager.createFrame(options, "wrapper");
