A user can open a local file in the file manager. [#109913320]

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -17,6 +17,7 @@
         appBuildNum: "1",
         providers: [
           "localStorage",
+          "localFile",
           {
             "name": "readOnly",
             "json": {
