Added import dialog [#110285648]

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -42,7 +42,12 @@
           }
         }
       }
-      CloudFileManager.createFrame(options, "wrapper");
+      CloudFileManager.createFrame(options, "wrapper", function (event) {
+        if (event.type == 'connected') {
+          var client = event.data.client;
+          client.insertMenuItemAfter('openFileDialog', {"name": "Import data...", action: client.importDataDialog.bind(client)})
+        }
+      });
     </script>
   </body>
 </html>
