Hide the hamburger dropdown when no menu specified in opts.
This is for part of [this story](https://www.pivotaltracker.com/story/show/110292104)

For optionally hiding the CFM menu dropdown when embedded in CODAP (in LARA)

[#110292104]

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -17,6 +17,7 @@
       <li><a href="read-only-with-folders.html">Read Only with Folders</a></li>
       <li><a href="menu-madness.html">Menu Madness</a></li>
       <li><a href="real-time-api.html">Google Real Time API</a></li>
+      <li><a href="hide-hamburger.html">Hide the entire hamburger.</a></li>
     </ul>
   </body>
 </html>
