--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript">
       var cfmClient;
 
+      // Disable "Expected an assignment or function call and instead saw an expression" warning
+      /*jshint -W030 */
       function newFile() {
         cfmClient && cfmClient.newFileDialog();
       }
@@ -115,7 +117,7 @@
         });
       }
 
-      document.getElementById("text").focus()
+      document.getElementById("text").focus();
     </script>
   </body>
 </html>
