Support wrapFileContent options for opting out of CFM wrapper file format. Add callback to 'openedFile' API for app to indicate successful completion of open. Clients that opt out of the CFM wrapper file format are responsible for combining CFM shared metadata with the content in 'getContent' and unpacking CFM shared metadata from the content in 'openedFile'. Use protocol-relative URLs for http/https compatibility.

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -106,6 +106,7 @@
             case 'newedFile':
             case 'openedFile':
               setContent(event.data.content);
+              if(event.callback) event.callback();
               focus();
               break;
 
