--- a/src/assets/examples/view-no-frame.html
+++ b/src/assets/examples/view-no-frame.html
@@ -115,6 +115,7 @@
             case 'newedFile':
             case 'openedFile':
               setContent(event.data.content);
+              if(event.callback) event.callback();
               focus();
               break;
         }
