--- a/src/assets/examples/no-frame.html
+++ b/src/assets/examples/no-frame.html
@@ -116,6 +116,7 @@
             case 'newedFile':
             case 'openedFile':
               setContent(event.data.content);
+              if(event.callback) event.callback();
               focus();
               break;
         }
