Add CFM example of opting out of CFM wrapping.

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -39,6 +39,7 @@
       }
 
       function setContent(cfmContent) {
+        if(typeof cfmContent !== "string") cfmContent = JSON.stringify(cfmContent);
         document.getElementById("text").value = cfmContent;
       }
 
