--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -13,6 +13,7 @@
       <li><a href="all-providers.html">All Providers</a></li>
       <li><a href="no-frame.html">No Frame</a></li>
       <li><a href="view-no-frame.html">View Without Frame</a></li>
+      <li><a href="view-no-frame-nowrap.html">View Without Frame (unwrapped)</a></li>
       <li><a href="auto-saving.html">Auto Saving</a></li>
       <li><a href="new-does-not-use-new-tab.html">New Does Not Open in New Tab</a></li>
       <li><a href="read-only-with-folders.html">Read Only with Folders</a></li>
