Add optional close file dialog for CODAP [#114585439]

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -20,6 +20,7 @@
       <li><a href="menu-madness.html">Menu Madness</a></li>
       <li><a href="real-time-api.html">Google Real Time API</a></li>
       <li><a href="hide-hamburger.html">Hide the entire hamburger.</a></li>
+      <li><a href="close-file.html">Add Close to the menu.</a></li>
     </ul>
   </body>
 </html>
