--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -106,6 +106,7 @@
 
             case 'newedFile':
             case 'openedFile':
+            case 'closedFile':
               setContent(event.data.content);
               if(event.callback) event.callback();
               focus();
