--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -22,6 +22,7 @@
       <li><a href="hide-hamburger.html">Hide the entire hamburger.</a></li>
       <li><a href="close-file.html">Add Close to the menu.</a></li>
       <li><a href="enable-demo-extension.html">Enable .demo extension</a></li>
+      <li><a href="enable-lara-sharing.html">Enable LARA sharing</a></li>
     </ul>
   </body>
 </html>
