--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -23,6 +23,7 @@
       <li><a href="close-file.html">Add Close to the menu.</a></li>
       <li><a href="enable-demo-extension.html">Enable .demo extension</a></li>
       <li><a href="enable-lara-sharing.html">Enable LARA sharing</a></li>
+      <li><a href="splash-screen.html">Splash screen state</a></li>
     </ul>
   </body>
 </html>
