Allow client to rename provider in url hash for files
This way if an app such as CODAP wants to link to the example files,
they can choose to use a more human-understandable url such as

`#file=examples:Four%20Seals`

instead of

`#file=readOnly:Four%20Seals`

It also allows us to have multiple readOnly providers and use distinct
urlDisplayNames to distinguish them in the hash.

[#128470511]

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -20,6 +20,7 @@
           "localFile",
           {
             "name": "readOnly",
+            "urlDisplayName": "examples",
             "json": {
               "first-example": "This is the first readonly example",
               "second-example": "This is the second readonly example"
