--- a/src/assets/examples/read-only-with-folders.html
+++ b/src/assets/examples/read-only-with-folders.html
@@ -17,6 +17,7 @@
           /* Original map format example */
           {
             "displayName": "Read Only (map)",
+            "urlDisplayName": "readOnly-map",
             "name": "readOnly",
             "json": {
               "First File Example": "This is the first readonly example",
@@ -34,11 +35,12 @@
           /* Original example in array format */
           {
             "displayName": "Read Only (array)",
+            "urlDisplayName": "readOnly-array",
             "name": "readOnly",
             "json": [
               { name: "Third File Example", content: "This is the third readonly example" },
               { name: "Fourth File Example", content: "This is the fourth readonly example" },
-              { name: "Third Folder Example", type: 'folder', 
+              { name: "Third Folder Example", type: 'folder',
                 children: [
                   { name: "Third Folder First File Example", content: "This is the third folder first readonly example" },
                   { name: "Third Folder Second File Example", content: "This is the third folder second readonly example" }
@@ -53,6 +55,7 @@
           /* Remote files in array format */
           {
             "displayName": "Read Only (remote 'src')",
+            "urlDisplayName": "readOnly-remote1",
             "name": "readOnly",
             "alphabetize": true,
             "src": 'https://codap-resources.concord.org/examples/index.json'
@@ -60,6 +63,7 @@
           /* Remote array format */
           {
             "displayName": "Read Only (remote folders)",
+            "urlDisplayName": "readOnly-remote2",
             "name": "readOnly",
             json: [
               {
