Fix extensions when downloading files
Previously, we were getting issues where the file "file.json" would be
downloaded as "file.json.json". We now use the `withExtensions`
function to correctly get the filename with the extension.

As part of this, `withExtensions` was made into a class method, and the
other calls to it updated appropriately.

Updated the main example to use an extension (txt), and added an
extension to one of the read-only examples, to show that it wouldn't
be shown in the list, or result in downloading "second-example.txt.txt"

[#125620691]

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -12,6 +12,7 @@
       var options = {
         app: "example-app",
         mimeType: "text/plain",
+        extension: "txt",
         appName: "CFM_Demo",
         appVersion: "0.1",
         appBuildNum: "1",
@@ -23,7 +24,7 @@
             "urlDisplayName": "examples",
             "json": {
               "first-example": "This is the first readonly example",
-              "second-example": "This is the second readonly example"
+              "second-example.txt": "This is the second readonly example"
             }
           },
           {
