Added examples for both deprecation phases

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -26,6 +26,8 @@
       <li><a href="lara-provider.html">LARA provider</a></li>
       <li><a href="splash-screen.html">Splash screen state</a></li>
       <li><a href="load-url-query-param.html?url=http://concord-consortium.github.io/codap-data/Climate_Change/Climate-Change-A.json">Load URL query parameter</a></li>
+      <li><a href="deprecate-phase-one.html">Deprecate: Phase One</a></li>
+      <li><a href="deprecate-phase-two.html">Deprecate: Phase Two</a></li>
     </ul>
   </body>
 </html>
