Added phase 3 deprecation example and added alert on open in all phases

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -28,6 +28,7 @@
       <li><a href="load-url-query-param.html?url=http://concord-consortium.github.io/codap-data/Climate_Change/Climate-Change-A.json">Load URL query parameter</a></li>
       <li><a href="deprecate-phase-one.html">Deprecate: Phase One</a></li>
       <li><a href="deprecate-phase-two.html">Deprecate: Phase Two</a></li>
+      <li><a href="deprecate-phase-three.html">Deprecate: Phase Three</a></li>
     </ul>
   </body>
 </html>
