--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -23,6 +23,7 @@
       <li><a href="close-file.html">Add Close to the menu.</a></li>
       <li><a href="enable-demo-extension.html">Enable .demo extension</a></li>
       <li><a href="enable-lara-sharing.html">Enable LARA sharing</a></li>
+      <li><a href="lara-provider.html">LARA provider</a></li>
       <li><a href="splash-screen.html">Splash screen state</a></li>
       <li><a href="load-url-query-param.html?url=http://concord-consortium.github.io/codap-data/Climate_Change/Climate-Change-A.json">Load URL query parameter</a></li>
     </ul>
