Converted "Download" to "Save" to local file system [#133108353]
* Added file save to local file provider
* Fixed missing sharing code changes for v2 document store
* Added download/save when enter key is pressed in save and download dialogs
* Removed "Download" from default menu

--- a/src/assets/examples/auto-saving.html
+++ b/src/assets/examples/auto-saving.html
@@ -25,6 +25,7 @@
               "second-example": "This is the second readonly example"
             }
           },
+          "localFile",
           {
             "name": "googleDrive",
             "mimeType": "text/plain",
