--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -30,6 +30,7 @@
       <li><a href="deprecate-phase-one.html">Deprecate: Phase One</a></li>
       <li><a href="deprecate-phase-two.html">Deprecate: Phase Two</a></li>
       <li><a href="deprecate-phase-three.html">Deprecate: Phase Three</a></li>
+      <li><a href="language-menu.html">Language menu</a></li>
     </ul>
   </body>
 </html>
