Handle translation menus without flags [#164714608]

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -30,7 +30,8 @@
       <li><a href="deprecate-phase-one.html">Deprecate: Phase One</a></li>
       <li><a href="deprecate-phase-two.html">Deprecate: Phase Two</a></li>
       <li><a href="deprecate-phase-three.html">Deprecate: Phase Three</a></li>
-      <li><a href="language-menu.html">Language menu</a></li>
+      <li><a href="language-menu.html">Language menu: Flags</a></li>
+      <li><a href="no-flag-language-menu.html">Language menu: No Flags</a></li>
     </ul>
   </body>
 </html>
