Fixed iframe path issue on S3 for examples

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -10,7 +10,7 @@
     </div>
     <script>
       var options = {
-        app: "example-app",
+        app: "example-app/index.html",
         mimeType: "text/plain",
         readableMimeTypes: ["application/json"],
         extension: "txt",
