--- a/src/assets/examples/auto-saving.html
+++ b/src/assets/examples/auto-saving.html
@@ -10,7 +10,7 @@
     </div>
     <script>
       var options = {
-        app: "example-app",
+        app: "example-app/index.html",
         autoSaveInterval: 5,
         mimeType: "text/plain",
         appName: "CFM_Demo",
