--- a/src/assets/examples/load-url-query-param.html
+++ b/src/assets/examples/load-url-query-param.html
@@ -20,7 +20,7 @@
       }
 
       var options = {
-        app: "example-app",
+        app: "example-app/index.html",
         mimeType: "text/plain",
         appName: "CFM_Demo",
         appVersion: "0.1",
