--- a/src/assets/examples/splash-screen.html
+++ b/src/assets/examples/splash-screen.html
@@ -24,7 +24,7 @@
     </div>
     <script>
       var options = {
-        app: "example-app",
+        app: "example-app/index.html",
         mimeType: "text/plain",
         appName: "CFM_Demo",
         appVersion: "0.1",
