--- a/src/assets/examples/enable-demo-extension.html
+++ b/src/assets/examples/enable-demo-extension.html
@@ -10,7 +10,7 @@
     </div>
     <script>
       var options = {
-        app: "example-app",
+        app: "example-app/index.html",
         mimeType: "text/plain",
         extension: ".demo",
         appName: "CFM_Demo",
