Added confirmCloseIfDirty ui option [#167212871]

--- a/src/assets/examples/index.html
+++ b/src/assets/examples/index.html
@@ -31,6 +31,7 @@
       <li><a href="deprecate-phase-three.html">Deprecate: Phase Three</a></li>
       <li><a href="language-menu.html">Language menu: Flags</a></li>
       <li><a href="no-flag-language-menu.html">Language menu: No Flags</a></li>
+      <li><a href="show-close-confirm.html">Shows confirm dialog if closed when there are unsaved changes.</a></li>
     </ul>
   </body>
 </html>
