Added import test scripts Added HTML changes to use in test verification

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -50,6 +50,7 @@
 
       function appendContent(cfmContent) {
         document.getElementById("text").value += '\n\nImported data: ' + cfmContent;
+        document.getElementById("text").innerHTML += '\n\nImported data: ' + cfmContent;
       }
 
       function connected(client) {
