Added data-test attribute to import button Added test for new documents Added tests for the import, save and restore, and read-only throught the buttons

--- a/src/assets/examples/example-app/index.html
+++ b/src/assets/examples/example-app/index.html
@@ -90,10 +90,10 @@
       <button onclick="saveSecondaryFileAs()">Export Separate File</button>
     </div>
     <div>
-      Import Local File: <input type="file" onchange="importLocalFile(event)">
+      Import Local File: <input type="file" onchange="importLocalFile(event)" data-test="import-button">
     </div>
     <div>
-      Open Local File: <input type="file" onchange="openLocalFile(event)">
+      Open Local File: <input type="file" onchange="openLocalFile(event)" data-test="open-local-button" >
     </div>
     <script type="text/javascript">
       var cfm = parent && parent.CloudFileManager ? parent.CloudFileManager : null,
