Begin work on s3-share-provider
* Create new (empty) S3 share provider following patterns from local-storage and document-store-shared-providers.
* Get the new provider showing up in the all-providers example.

[#172225454]
https://www.pivotaltracker.com/story/show/172225454

--- a/src/assets/examples/all-providers.html
+++ b/src/assets/examples/all-providers.html
@@ -36,7 +36,8 @@
           {
             "name": "documentStore",
             "patch": true
-          }
+          },
+          "s3-share-provider"
         ],
         ui: {
           menu: CloudFileManager.DefaultMenu,
