Build improvements - exclude globals (e.g. React, lodash, etc.) from app.js bundle - include only `S3` from `aws-sdk` rather than the whole library - include `app.styl` from `app.jsx` rather than as a separate entry - eliminate unused options/exports from `build-opts` - [codap] eliminate duplicate React warning - [codap] exclude autolaunch from codap build - [codap] perform .ignore rename in shell rather than webpack to fix source map interaction

--- a/src/assets/autolaunch/autolaunch.html
+++ b/src/assets/autolaunch/autolaunch.html
@@ -3,7 +3,7 @@
 <head>
   <Title>CFM AutoLauching Interactive</Title>
   <link rel="stylesheet" href="./autolaunch.css">
-  <script src="../js/autolaunch.js"></script>
+  <script src="./autolaunch.js"></script>
 </head>
 <body>
 <div class='row launch-error'>
